--- a/package.json
+++ b/package.json
@@ -4,25 +4,10 @@
   "author": {
     "name": "Jörn Buchwald"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "scripts": {
-    "test": "jest --watch",
-    "start": "webpack-dev-server --config webpack.config.js --content-base build/ --inline --history-api-fallback",
+    "start": "webpack-dev-server --config webpack.config.js --content-base build/",
     "build": "webpack --config webpack.config.js"
-  },
-  "jest": {
-    "globals": {
-      "window": true
-    },
-    "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "testRegex": "(\\.(test|spec))\\.(ts|tsx|js)$"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.10",
